--- a/copilot/pipelines/boat/manifest.yml
+++ b/copilot/pipelines/boat/manifest.yml
@@ -1,9 +1,9 @@
-# The manifest for the "kanth" pipeline.
+# The manifest for the "boat" pipeline.
 # This YAML file defines your pipeline: the source repository it tracks and the order of the environments to deploy to.
 # For more info: https://aws.github.io/copilot-cli/docs/manifest/pipeline/
 
 # The name of the pipeline.
-name: kanth
+name: boat
 
 # The version of the schema used in this template.
 version: 1
@@ -24,6 +24,11 @@ source:
 stages:
   - # The name of the environment.
     name: beat
+    deployments:
+      deploy-env:
+        template_path: infrastructure/beat.env.yml
+        template_config: infrastructure/beat.env.params.json
+        stack_name: ram-beat
     # Optional: flag for manual approval action before deployment.
     # requires_approval: true
     # Optional: use test commands to validate this stage of your build.
